crates/ohno_macros_impl/src/derive_error/display/snapshots/ohno_macros_impl__derive_error__display__tests__a_declared_core_stays_referenceable.snap
---
source: crates/ohno_macros_impl/src/derive_error/display/mod/tests.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"{path}, carrying {carried}\")] struct T\n    {\n        path: String, carried: ohno::OhnoCore,\n        #[doc = \" ohno::generated-core@7f3d9c2a\"] ohno_core: ohno::OhnoCore,\n    }\n})"
---
fn message() {
    let _ = ::std::format!("{}, carrying {}", & self.path, & self.carried);
}
