crates/ohno_macros_impl/src/derive_error/display/snapshots/ohno_macros_impl__derive_error__display__tests__a_positional_argument_is_scoped_and_parenthesized.snap
---
source: crates/ohno_macros_impl/src/derive_error/display/mod/tests.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"{}\", count * 2)] struct T { count: u32, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = ::std::format!("{}", & (self.count * 2));
}
