crates/ohno_macros_impl/src/derive_error/display/snapshots/ohno_macros_impl__derive_error__display__tests__a_static_template_lowers_to_a_literal.snap
---
source: crates/ohno_macros_impl/src/derive_error/display/mod/tests.rs
expression: "lowered(parse_quote!\n{ #[display(\"Static error message\")] struct T { inner: ohno::OhnoCore } })"
---
fn message() {
    let _ = "Static error message";
}
