crates/ohno_macros_impl/src/derive_error/display/snapshots/ohno_macros_impl__derive_error__display__tests__a_tuple_field_is_named_by_index.snap
---
source: crates/ohno_macros_impl/src/derive_error/display/mod/tests.rs
expression: "lowered(parse_quote!\n{ #[display(\"{0} and {}\", 1.abs())] struct T(String, i32, ohno::OhnoCore); })"
---
fn message() {
    let _ = ::std::format!("{} and {}", & self.0, & (self.1.abs()));
}
